--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -19,11 +19,10 @@
 }
 
 .popup__container {
-    display: flex;
+    position: relative;
     width: 100%;
     height: 100%;
-    justify-content: center;
-    align-items: center;
+    padding-top: 5rem;
 }
 
 .popup__box {
@@ -31,8 +30,8 @@
     background-color: var(--secondary-color);
     padding: 1rem;
     border-radius: 0.8rem;
-    /* height: 20rem; */
-    width: 28rem;
+    width: 19rem;
+    margin: 0 auto;
 }
 
 .popup__header {
@@ -66,7 +65,6 @@
 
 @media (min-width: 0px) and (max-width: 767.98px) {
     .popup__box {
-        width: 100%;
         margin-left: 1rem;
         margin-right: 1rem;
     }
